--- a/style.css
+++ b/style.css
@@ -245,3 +245,14 @@ footer p:nth-child(2){
 	transform: scale(1.3);
 	transition: 2s;
 }
+
+@media (max-width: 1024px){
+	.nav{
+		width: 10%;
+	}
+	.services{
+		width: 100%;
+	}
+	.services .title h2{
+		width: 10%;
+	}
