--- a/style.css
+++ b/style.css
@@ -246,6 +246,19 @@ footer p:nth-child(2){
 	transition: 2s;
 }
 
+
+
+
+@media (max-width: 600px) {
+	.nav{
+		width: 10%;
+	}
+	.services .title h2{
+		width: 10%;
+	}
+	
+}
+
 @media (max-width: 1024px){
 	.nav{
 		width: 10%;
@@ -256,3 +269,5 @@ footer p:nth-child(2){
 	.services .title h2{
 		width: 10%;
 	}
+
+}
